--- a/bb-pets-adoption-frontend/public/index.html
+++ b/bb-pets-adoption-frontend/public/index.html
@@ -3,20 +3,21 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon-32x32.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!-- Meta Description -->
+  <meta name="description"
+    content="Adopt a pet with confidence through our trusted pet adoption services. Connect with pet providers, learn about the adoption process, and find your perfect pet today.">
+  <!-- Meta Keywords -->
+  <meta name="keywords"
+    content="adopt a pet, pet adoption, pet providers, adoption services, pet adoption process, adopt a cat, adopt a dog">
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
+
   <!-- BOOSTRAP CDN FOR STYLING -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-  <title>React App</title>
+  <title>Adopt a Pet with Confidence | Pet Adoption Services</title>
 </head>
 
 <body>
